--- a/estilo.css
+++ b/estilo.css
@@ -16,7 +16,7 @@ text-shadow: 2px 2px 2px white;
 
 div{
 
-background-image: url(frank.png);
+background-image: url(macaco.jpg);
 
 background-size: 55px;
 
